Added progress bar maker

--- a/index.html
+++ b/index.html
@@ -124,5 +124,10 @@ document.getElementById('eps_rem').innerHTML = eps_rem
 	<a>*till the start of Wano arc</a>
 </div>
 
+<div class='progbar'>
+	<h1>Progress Bar</h1>
+	<img src='progress_bar.png' >
+</div>
+
 </body>
 </html>
