--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ var x = setInterval(function() {
 
 <div class='data'>
 	<div class='rem_div'>
-		<a>Episodes Remaining*: </a>
+		<a>Episodes Remaining: </a>
 		<a id='eps_rem'></a><br>
 	</div>
 	<div class='est_div'>
@@ -127,10 +127,6 @@ document.getElementById('eps_rem').innerHTML = eps_rem
 	<button type='button' >Reset</button>
 </form>
 -->
-
-<div>
-	<a>*till the start of Wano arc</a>
-</div>
 
 <div class='progbar'>
 	<h1>Progress Bar</h1>
