--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ var x = setInterval(function() {
 	
 
 	var init_time_since = now - init_start_date;
-	var time_finish = ((init_time_since / eps_watched) * eps_total);
+	var time_finish = ((init_time_since / eps_watched) * eps_rem);
 
 
 	var days = Math.floor(time_since / (1000 * 60 * 60 * 24));
