--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ document.getElementById('eps_rem').innerHTML = eps_rem
 <div class='progbar'>
 	<h1>Progress Bar</h1>
 	<img src='progress_bar.png' >
+	<a id='perc_complete_text'></a>
 </div>
 
 <script>
