--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class='text'>
 
 <script>
-var start_date = new Date('mdy').getTime(); // Edit this
+var start_date = new Date('01/10/2021').getTime(); // Edit this
 var init_start_date = new Date('Apr 15 2020').getTime();
 
 var now = new Date().getTime();
