--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 <div class='text'>
 
 <script>
-var start_date = new Date('01/10/2021').getTime(); // Edit this
+var start_date = new Date('03/24/2021').getTime(); // Edit this
 var init_start_date = new Date('Apr 15 2020').getTime();
 
 var now = new Date().getTime();
 var time_since = now - start_date;
 
-var eps_watched = 44; // Edit this
+var eps_watched = 47; // Edit this
 document.getElementById('eps_watched_text').innerHTML = '\xa0' + eps_watched + '\xa0';
 
-var eps_total = 952
+var eps_total = 952;
 /*
 fetch('file://./ep.txt')
   .then(response => response.text())
